fixed btn group alignment

--- a/kidsfly/src/components/index.css
+++ b/kidsfly/src/components/index.css
@@ -15,7 +15,6 @@ code {
 .sign-up-btn {
   height: 40px;
   width: 160px;
-  margin-right: 8%;
   border-radius: 5px;
   background: gray;
   box-shadow: 0px 0px 0px transparent;
